Describe the problem in readme